fix: commit Java 8 compatibility, smoke test script, and test fixture
- Replace Set.of() and List.of() with Java 8-compatible alternatives
- Remove unused idToNode parameter from recursiveJSONLoopCanonical
- Add test_json_roundtrip.py to master smoke test script
- Commit test_blank_map.mm as tracked test fixture